game settings ui consolidation

--- a/web/index.html
+++ b/web/index.html
@@ -26,21 +26,14 @@
 
       <!-- Controls -->
       <div id="controls" class="controls">
-        <div class="control-group">
-          <label class="control-label">PLAYER</label>
-          <div class="button-group">
-            <button id="btn-first" class="btn btn-option selected">1ST (X)</button>
-            <button id="btn-second" class="btn btn-option">2ND (O)</button>
+        <div class="control-row">
+          <div class="control-group">
+            <label class="control-label">PLAYER</label>
+            <button id="btn-player" class="btn btn-cycle">1ST (X)</button>
           </div>
-        </div>
-
-        <div class="control-group">
-          <label class="control-label">DIFFICULTY</label>
-          <div class="button-group">
-            <button id="btn-easy" class="btn btn-option">EASY</button>
-            <button id="btn-medium" class="btn btn-option selected">MED</button>
-            <button id="btn-hard" class="btn btn-option">HARD</button>
-            <button id="btn-expert" class="btn btn-option">PRO</button>
+          <div class="control-group">
+            <label class="control-label">DIFFICULTY</label>
+            <button id="btn-difficulty" class="btn btn-cycle">MEDIUM</button>
           </div>
         </div>
 
