--- a/web/index.html
+++ b/web/index.html
@@ -14,6 +14,7 @@
       <header class="header">
         <h1 class="title">ZIC-ZAC-ZOE</h1>
         <p class="subtitle">4 IN A ROW WINS<br>3 IN A ROW LOSES</p>
+        <p id="stats" class="stats"></p>
       </header>
 
       <!-- Game Status -->
