add ui element indicating degree to which guardrail rules informed the move chosen.

--- a/web/index.html
+++ b/web/index.html
@@ -48,6 +48,9 @@
 
       <!-- Model iteration indicator -->
       <div id="model-iteration" class="model-iteration"></div>
+
+      <!-- Guardrail weight indicator -->
+      <div id="guardrail-weight" class="guardrail-weight"></div>
     </div>
 
     <script type="module" src="/src/main.ts"></script>
