2 player mode - no ai

--- a/web/index.html
+++ b/web/index.html
@@ -30,11 +30,11 @@
         <div class="control-row">
           <div class="control-group">
             <label class="control-label">PLAYER</label>
-            <button id="btn-player" class="btn btn-cycle">1ST (X)</button>
+            <button id="btn-player" class="btn btn-cycle">X (1ST)</button>
           </div>
           <div class="control-group">
-            <label class="control-label">DIFFICULTY</label>
-            <button id="btn-difficulty" class="btn btn-cycle">MEDIUM</button>
+            <label class="control-label">MODE</label>
+            <button id="btn-mode" class="btn btn-cycle btn-mode">MEDIUM</button>
           </div>
         </div>
 
