--- a/web/index.html
+++ b/web/index.html
@@ -29,12 +29,16 @@
       <div id="controls" class="controls">
         <div class="control-row">
           <div class="control-group">
+            <label class="control-label">MODE</label>
+            <button id="btn-mode" class="btn btn-cycle">1-PLAYER</button>
+          </div>
+          <div class="control-group">
             <label class="control-label">PLAYER</label>
             <button id="btn-player" class="btn btn-cycle">X (1ST)</button>
           </div>
           <div class="control-group">
-            <label class="control-label">MODE</label>
-            <button id="btn-mode" class="btn btn-cycle btn-mode">MEDIUM</button>
+            <label class="control-label">DIFFICULTY</label>
+            <button id="btn-difficulty" class="btn btn-cycle">MEDIUM</button>
           </div>
         </div>
 
