caught a few ui/ux bugs

--- a/web/index.html
+++ b/web/index.html
@@ -14,8 +14,8 @@
       <header class="header">
         <h1 class="title">ZIC-ZAC-ZOE</h1>
         <p class="subtitle">
-          <span class="subtitle-lose">3 IN A ROW LOSE</span>
-          &nbsp;&nbsp;&nbsp;
+          <span class="subtitle-lose">3 IN A ROW LOSES</span>
+          &nbsp;&nbsp;
           <span class="subtitle-win">4 IN A ROW WINS</span>
         </p>
       </header>
